--- a/Bookingam/front-end/my-app/src/pages/pagesCSS/card.css
+++ b/Bookingam/front-end/my-app/src/pages/pagesCSS/card.css
@@ -3,18 +3,18 @@
     perspective: 150rem;
     -moz-perspective: 150rem;
     position: relative;
-    height:220px;
+    height: 220px;
     width: 200px;
 }
 
 .card__side {
-    
+
     -webkit-transition: all 0.8s ease;
     transition: all 0.8s ease;
     position: absolute;
     top: 0;
     left: 0;
-    height:220px;
+    height: 220px;
     width: 200px;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
@@ -47,17 +47,19 @@
 }
 
 
-.card img{
+.card img {
     width: 100% !important;
-    
-    margin-bottom:5px; /* to match column gap */
+
+    margin-bottom: 5px;
+    /* to match column gap */
 }
 
-.card__details{
+.card__details {
     height: 100%;
     width: 100%;
 }
-img{
+
+img {
     width: 100%;
     height: 100%;
 }
@@ -75,16 +77,39 @@ img{
 }
 
 
-.cardBackDetails {
-    text-align: top;
-    color: black;
-    
+.cardBack {
+    margin-top: 5px;
+    margin-left: 2px;
+    margin-right: 2px;
+    margin-bottom: 5px;
 }
 
-.cardText {
-    font-size: 20px;
-    text-transform: uppercase;
+.ro1BackCard {
 
+
+    height: 43px;
+    text-align: center;
+}
+
+.ro2BackCard {
+
+    height: 43px;
+    text-align: center;
+}
+
+.ro3BackCard {
+
+    height: 81px;
+    text-align: center;
+}
+
+.ro4BackCard {
+
+
+    height: 43px;
+    text-align: center;
+    font-size: 12px;
+    font-weight: bold;
 }
 
 
@@ -110,5 +135,3 @@ img{
 
 
 }
-
-
