--- a/Bookingam/front-end/my-app/src/pages/pagesCSS/card.css
+++ b/Bookingam/front-end/my-app/src/pages/pagesCSS/card.css
@@ -46,10 +46,13 @@
     transform: rotateY(0);
 }
 
-
-.card img {
+img {
+    width: 100%;
+    height: 100%;
+}
+.card_details_img {
     width: 100% !important;
-
+    height: 100% !important;
     margin-bottom: 5px;
     /* to match column gap */
 }
@@ -59,10 +62,7 @@
     width: 100%;
 }
 
-img {
-    width: 100%;
-    height: 100%;
-}
+
 
 
 
@@ -89,24 +89,29 @@ img {
 
     height: 43px;
     text-align: center;
+    margin-bottom: 6px;
+    font-weight: bold;
 }
 
 .ro2BackCard {
 
     height: 43px;
     text-align: center;
+    margin-bottom: 2px;
+    font-weight: bold;
 }
 
 .ro3BackCard {
 
-    height: 81px;
+    height: 79px;
     text-align: center;
+    font-weight: bold;
 }
 
 .ro4BackCard {
 
 
-    height: 43px;
+    height: 41px;
     text-align: center;
     font-size: 12px;
     font-weight: bold;
