--- a/Bookingam/front-end/my-app/src/components/componentsCSS/footer.css
+++ b/Bookingam/front-end/my-app/src/components/componentsCSS/footer.css
@@ -1,5 +1,9 @@
-.containerFooter{
-    
+.containerFooter {
+    background: rgb(29, 30, 31);
     margin-right: 0px;
+
 }
 
+.navtext {
+    color: silver;
+}
