--- a/Bookingam/front-end/my-app/src/pages/pagesCSS/list.css
+++ b/Bookingam/front-end/my-app/src/pages/pagesCSS/list.css
@@ -1,4 +1,7 @@
-
+img {
+  width: 100%;
+  height: 100%;
+}
 html{
   resize: both;
   overflow: auto;
@@ -60,4 +63,8 @@ li a:hover {
   content: "";
   display: table;
   clear: both;
+}
+
+.button{
+  background-color: red;
 }
